Working playback rate modifier buttons and double spinbox.

--- a/GUI/UI/VideoPlayer/main_video_player_window.ui
+++ b/GUI/UI/VideoPlayer/main_video_player_window.ui
@@ -150,68 +150,10 @@
             <number>0</number>
            </property>
            <layout class="QGridLayout" name="gridLayout_2">
-            <item row="1" column="3">
-             <widget class="QDoubleSpinBox" name="doubleSpinBoxPlaybackSpeed">
-              <property name="minimum">
-               <double>0.100000000000000</double>
-              </property>
-              <property name="maximum">
-               <double>100.000000000000000</double>
-              </property>
-              <property name="value">
-               <double>1.000000000000000</double>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="12">
-             <widget class="QToolButton" name="btnLeft">
-              <property name="toolTip">
-               <string>Jump Frames Left</string>
-              </property>
-              <property name="text">
-               <string>&lt;</string>
-              </property>
-              <property name="shortcut">
-               <string>Left</string>
-              </property>
-              <property name="arrowType">
-               <enum>Qt::LeftArrow</enum>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="10">
-             <spacer name="horizontalSpacer">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item row="1" column="4">
-             <widget class="QPushButton" name="button_slow_down">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="toolTip">
-               <string>Slow down the video</string>
-              </property>
-              <property name="text">
-               <string>Slow Down</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="14">
+            <item row="1" column="15">
              <widget class="QToolButton" name="btnRight">
               <property name="toolTip">
-               <string>Jump Frames Right</string>
+               <string>Step Frames Right</string>
               </property>
               <property name="text">
                <string>&gt;</string>
@@ -224,23 +166,20 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="2">
-             <widget class="QPushButton" name="button_speed_up">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="toolTip">
-               <string>Speed up the video</string>
-              </property>
-              <property name="text">
-               <string>Speed Up</string>
-              </property>
-             </widget>
-            </item>
             <item row="1" column="9">
+             <spacer name="horizontalSpacer_7">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="10">
              <widget class="QPushButton" name="button_full_screen">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -256,8 +195,31 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="16">
-             <spacer name="horizontalSpacer_3">
+            <item row="1" column="3">
+             <widget class="QDoubleSpinBox" name="doubleSpinBoxPlaybackSpeed">
+              <property name="minimum">
+               <double>0.200000000000000</double>
+              </property>
+              <property name="maximum">
+               <double>6.000000000000000</double>
+              </property>
+              <property name="value">
+               <double>1.000000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="8">
+             <widget class="QPushButton" name="button_mark_end">
+              <property name="toolTip">
+               <string>Mark the end of the entry</string>
+              </property>
+              <property name="text">
+               <string>Mark End</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="6">
+             <spacer name="horizontalSpacer_6">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -268,85 +230,6 @@
                </size>
               </property>
              </spacer>
-            </item>
-            <item row="1" column="13">
-             <widget class="QSpinBox" name="spinBoxFrameJumpMultiplier">
-              <property name="minimum">
-               <number>1</number>
-              </property>
-              <property name="maximum">
-               <number>1000</number>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="6">
-             <widget class="QPushButton" name="button_mark_start">
-              <property name="toolTip">
-               <string>Mark the start of the entry</string>
-              </property>
-              <property name="text">
-               <string>Mark Start</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="15">
-             <widget class="QToolButton" name="btnSkipRight">
-              <property name="toolTip">
-               <string>Skip Frames Right</string>
-              </property>
-              <property name="text">
-               <string>-&gt;</string>
-              </property>
-              <property name="shortcut">
-               <string>Ctrl+Right</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="17">
-             <widget class="QPushButton" name="btnHelp">
-              <property name="text">
-               <string>Help</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0" colspan="18">
-             <widget class="HighlightedJumpSlider" name="slider_progress">
-              <property name="maximum">
-               <number>9999</number>
-              </property>
-              <property name="pageStep">
-               <number>1</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="tickPosition">
-               <enum>QSlider::NoTicks</enum>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="11">
-             <widget class="QToolButton" name="btnSkipLeft">
-              <property name="toolTip">
-               <string>Skip Frames Left</string>
-              </property>
-              <property name="text">
-               <string>&lt;-</string>
-              </property>
-              <property name="shortcut">
-               <string>Ctrl+Left</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="7">
-             <widget class="QPushButton" name="button_mark_end">
-              <property name="toolTip">
-               <string>Mark the end of the entry</string>
-              </property>
-              <property name="text">
-               <string>Mark End</string>
-              </property>
-             </widget>
             </item>
             <item row="1" column="0">
              <widget class="ToggleButton" name="button_play_pause">
@@ -367,6 +250,97 @@
               </property>
              </widget>
             </item>
+            <item row="1" column="7">
+             <widget class="QPushButton" name="button_mark_start">
+              <property name="toolTip">
+               <string>Mark the start of the entry</string>
+              </property>
+              <property name="text">
+               <string>Mark Start</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" colspan="19">
+             <widget class="HighlightedJumpSlider" name="slider_progress">
+              <property name="maximum">
+               <number>9999</number>
+              </property>
+              <property name="pageStep">
+               <number>1</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="tickPosition">
+               <enum>QSlider::NoTicks</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="11">
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="14">
+             <widget class="QSpinBox" name="spinBoxFrameJumpMultiplier">
+              <property name="minimum">
+               <number>1</number>
+              </property>
+              <property name="maximum">
+               <number>1000</number>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="17">
+             <spacer name="horizontalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="13">
+             <widget class="QToolButton" name="btnLeft">
+              <property name="toolTip">
+               <string>Step Frames Left</string>
+              </property>
+              <property name="text">
+               <string>&lt;</string>
+              </property>
+              <property name="shortcut">
+               <string>Left</string>
+              </property>
+              <property name="arrowType">
+               <enum>Qt::LeftArrow</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="12">
+             <widget class="QToolButton" name="btnSkipLeft">
+              <property name="toolTip">
+               <string>Skip Frames Left</string>
+              </property>
+              <property name="text">
+               <string>&lt;-</string>
+              </property>
+              <property name="shortcut">
+               <string>Ctrl+Left</string>
+              </property>
+             </widget>
+            </item>
             <item row="1" column="1">
              <spacer name="horizontalSpacer_5">
               <property name="orientation">
@@ -380,31 +354,57 @@
               </property>
              </spacer>
             </item>
-            <item row="1" column="5">
-             <spacer name="horizontalSpacer_6">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
+            <item row="1" column="16">
+             <widget class="QToolButton" name="btnSkipRight">
+              <property name="toolTip">
+               <string>Skip Frames Right</string>
               </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
+              <property name="text">
+               <string>-&gt;</string>
               </property>
-             </spacer>
+              <property name="shortcut">
+               <string>Ctrl+Right</string>
+              </property>
+             </widget>
             </item>
-            <item row="1" column="8">
-             <spacer name="horizontalSpacer_7">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
+            <item row="1" column="18">
+             <widget class="QPushButton" name="btnHelp">
+              <property name="text">
+               <string>Help</string>
               </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
+             </widget>
+            </item>
+            <item row="1" column="4">
+             <widget class="QPushButton" name="button_speed_up">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
               </property>
-             </spacer>
+              <property name="toolTip">
+               <string>Speed up the video</string>
+              </property>
+              <property name="text">
+               <string>Speed Up</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2">
+             <widget class="QPushButton" name="button_slow_down">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="toolTip">
+               <string>Slow down the video</string>
+              </property>
+              <property name="text">
+               <string>Slow Down</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
