--- a/GUI/MainWindow/MainWindow.ui
+++ b/GUI/MainWindow/MainWindow.ui
@@ -32,7 +32,7 @@
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -42,6 +42,8 @@
     <addaction name="actionLoad"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
+    <addaction name="separator"/>
+    <addaction name="actionSettings"/>
     <addaction name="separator"/>
     <addaction name="actionExit_Application"/>
    </widget>
@@ -111,6 +113,11 @@
   <action name="actionVideo_Player">
    <property name="text">
     <string>Video Player</string>
+   </property>
+  </action>
+  <action name="actionSettings">
+   <property name="text">
+    <string>Settings...</string>
    </property>
   </action>
  </widget>
