--- a/GUI/MainWindow/MainWindow.ui
+++ b/GUI/MainWindow/MainWindow.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>885</width>
+    <width>847</width>
     <height>800</height>
    </rect>
   </property>
@@ -40,7 +40,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>885</width>
+     <width>847</width>
      <height>22</height>
     </rect>
    </property>
@@ -90,15 +90,15 @@
    <widget class="QWidget" name="dockWidgetContents_2">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Zoom:</string>
          </property>
         </widget>
        </item>
-       <item>
+       <item row="0" column="1">
         <widget class="QDoubleSpinBox" name="doubleSpinBox_currentZoom">
          <property name="decimals">
           <number>1</number>
@@ -106,23 +106,40 @@
          <property name="minimum">
           <double>0.100000000000000</double>
          </property>
+         <property name="maximum">
+          <double>5000.000000000000000</double>
+         </property>
          <property name="singleStep">
-          <double>0.100000000000000</double>
+          <double>1.000000000000000</double>
          </property>
          <property name="value">
           <double>1.000000000000000</double>
          </property>
         </widget>
        </item>
-       <item>
+       <item row="0" column="3">
+        <widget class="QLabel" name="lblActiveViewportDuration">
+         <property name="text">
+          <string>--</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>Viewport Duration:</string>
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QLabel" name="lblActiveViewportDuration">
+       <item row="1" column="2">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Total Timeline Duration:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="3">
+        <widget class="QLabel" name="lblActiveTotalTimelineDuration">
          <property name="text">
           <string>--</string>
          </property>
