--- a/GUI/UI/VideoPlayer/main_video_player_window.ui
+++ b/GUI/UI/VideoPlayer/main_video_player_window.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Video Loop</string>
+   <string>Video Player</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
