--- a/GUI/UI/VideoPlayer/MainVideoPlayerWindow.ui
+++ b/GUI/UI/VideoPlayer/MainVideoPlayerWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>main_video_player_window</class>
- <widget class="QMainWindow" name="main_video_player_window">
+ <class>MainVideoPlayerWindow</class>
+ <widget class="QMainWindow" name="MainVideoPlayerWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
